fix: better clicker on mobile and unauthorized users

--- a/frontend/static/css/components.css
+++ b/frontend/static/css/components.css
@@ -505,7 +505,7 @@
         }
 
     .clicker-text {
-        min-width: 150px;
+        min-width: 50px;
     }
 
     .clicker-counter {
